--- a/README.html
+++ b/README.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -132,6 +135,12 @@ $(document).ready(function () {
 </div>
 <div id="first-questions" class="section level1">
 <h1>First questions</h1>
+<div id="what-is-r" class="section level2">
+<h2>What is R</h2>
+<ul>
+<li>As of now, my best answer is that R is a (very robust) programming language capable of a great many things. To me, the R language seems primarily focused on gathering, manipulating, analyzing, and presenting data in all its various forms.</li>
+</ul>
+</div>
 </div>
 
 
