Adding code for sample data

--- a/README.html
+++ b/README.html
@@ -140,6 +140,20 @@ $(document).ready(function () {
 <ul>
 <li>As of now, my best answer is that R is a (very robust) programming language capable of a great many things. To me, the R language seems primarily focused on gathering, manipulating, analyzing, and presenting data in all its various forms.</li>
 </ul>
+<p>The R community on Twitter has been open and very helpful. For example, here are the two recommended books for learning R, which are free and on the web.</p>
+<p>Modern Dive <a href="https://moderndive.com/" class="uri">https://moderndive.com/</a></p>
+<p>R for Data Science <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a></p>
+<p>Below are some of my notes from R for Data Science</p>
+</div>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<p>To begin, one has to get data into R (* are recommendations) 1. After import, “tidy” your data. This means that each column is a variable and each row is an obsrvation/subject. 1. Next, “transform” the raw data to create new variables of interest (e.g., summary statistics).</p>
+<p>This second step is my biggest hurdle at the moment. The notes below will cover how to take these initial steps to transform raw data.</p>
+</div>
+<div id="import-data" class="section level2">
+<h2>Import Data</h2>
+<p><code>{r Import data} #       IMPORT ROI AND BEHAVIORAL DATA combined_dat &lt;- read_excel(&quot;Psychosis Risk Structural Clusters with Covariates 7.26.18.xlsx&quot;)</code></p>
+<p>sample_dat &lt;- read_excel(“SampleData.xlsx”)</p>
 </div>
 </div>
 
